--- a/INDEX.html
+++ b/INDEX.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>INC</title>
+    <title>INC-RODOLF</title>
 </head>
 <body>
 
@@ -147,7 +147,7 @@
             <label for="browser">
                 escolha o seu navegador na lista:
             </label>
-            <input list="browsers" name="browser" id="browser">
+        <input list="browsers" name="browser" id="browser">
             <datalist id="browsers">
                 <option value="edge">
                 <option value="firefox">
